--- a/docker-compose-production.yml
+++ b/docker-compose-production.yml
@@ -2,49 +2,86 @@ version: "3.9"
 services:
     traefik:
         image: traefik:2.4
-        command:
-            --providers.docker=true
-            --providers.docker.watch=true
-            --providers.docker.swarmMode=true
-            --providers.docker.exposedByDefault=false
-            --entryPoints.http.address=:80
-            --entryPoints.https.address=:443
-            --certificatesresolvers.letsEncrypt.acme.httpChallenge=true
-            --certificatesresolvers.letsEncrypt.acme.httpChallenge.entryPoint=http
-            --certificatesresolvers.letsEncrypt.acme.email=hermansochi@ya.ru
-            --certificatesresolvers.letsEncrypt.acme.storage=/certs/acme.json
         ports:
+            # Listen on port 80, default for HTTP, necessary to redirect to HTTPS
             - target: 80
               published: 80
-              protocol: tcp
               mode: host
+            # Listen on port 443, default for HTTPS
             - target: 443
               published: 443
-              protocol: tcp
               mode: host
-        networks:
-            - traefik-public
+        deploy:
+            placement:
+                constraints:
+                # Make the traefik service run only on the node with this label
+                # as the node with it has the volume for the certificates
+                - node.labels.traefik-public.traefik-public-certificates == true
+            labels:
+                # Enable Traefik for this service, to make it available in the public network
+                - traefik.enable=true
+                # Use the traefik-public network (declared below)
+                - traefik.docker.network=traefik-public
+                # Use the custom label "traefik.constraint-label=traefik-public"
+                # This public Traefik will only use services with this label
+                # That way you can add other internal Traefik instances per stack if needed
+                - traefik.constraint-label=traefik-public
+                # admin-auth middleware with HTTP Basic auth
+                # Using the environment variables USERNAME and HASHED_PASSWORD
+                - traefik.http.middlewares.admin-auth.basicauth.users=user:$$2y$$05$$JGOfUm/YT/b/Yjpo2pCGaOFowz8ZPwI13FjDrzUtEJbaEQOdhipnu
+                # https-redirect middleware to redirect HTTP to HTTPS
+                # It can be re-used by other stacks in other Docker Compose files
+                - traefik.http.middlewares.https-redirect.redirectscheme.scheme=https
+                - traefik.http.middlewares.https-redirect.redirectscheme.permanent=true
+                # traefik-http set up only to use the middleware to redirect to https
+                # Uses the environment variable DOMAIN
+                - traefik.http.routers.traefik-public-http.rule=Host(`traefik.hub.herman.team`)
+                - traefik.http.routers.traefik-public-http.entrypoints=http
+                - traefik.http.routers.traefik-public-http.middlewares=https-redirect
+                # traefik-https the actual router using HTTPS
+                # Uses the environment variable DOMAIN
+                - traefik.http.routers.traefik-public-https.rule=Host(`traefik.hub.herman.team`)
+                - traefik.http.routers.traefik-public-https.entrypoints=https
+                - traefik.http.routers.traefik-public-https.tls=true
+                # Use the special Traefik service api@internal with the web UI/Dashboard
+                - traefik.http.routers.traefik-public-https.service=api@internal
+                # Use the "le" (Let's Encrypt) resolver created below
+                - traefik.http.routers.traefik-public-https.tls.certresolver=le
+                # Enable HTTP Basic auth, using the middleware created above
+                - traefik.http.routers.traefik-public-https.middlewares=admin-auth
+                # Define the port inside of the Docker service to use
+                - traefik.http.services.traefik-public.loadbalancer.server.port=8080
         volumes:
+            - /etc/localtime:/etc/localtime:ro
             - /var/run/docker.sock:/var/run/docker.sock:ro
             - traefik-public-certs:/certs
-        deploy:
-            labels:
-                - traefik.enable=true
-                - traefik.docker.network=traefik-public
-
-                - traefik.http.routers.http-catchall.rule=HostRegexp(`{host:.+}`)
-                - traefik.http.routers.http-catchall.entryPoints=http
-                - traefik.http.routers.http-catchall.middlewares=redirect-to-https
-                - traefik.http.services.http-catchall.loadBalancer.server.port=80
-
-                - traefik.http.middlewares.redirect-to-https.redirectScheme.scheme=https
-                - traefik.http.middlewares.redirect-to-https.redirectScheme.permanent=true
-
-                - traefik.http.middlewares.secure-headers.headers.sslRedirect=true
-                - traefik.http.middlewares.secure-headers.headers.stsSeconds=31536000
-                - traefik.http.middlewares.secure-headers.headers.contentSecurityPolicy=block-all-mixed-content
-            placement:
-                constraints: [ node.role == manager ]
+        command:
+            # Enable Docker in Traefik, so that it reads labels from Docker services
+            - --providers.docker
+            # Add a constraint to only use services with the label "traefik.constraint-label=traefik-public"
+            - --providers.docker.constraints=Label(`traefik.constraint-label`, `traefik-public`)
+            # Do not expose all Docker services, only the ones explicitly exposed
+            - --providers.docker.exposedbydefault=false
+            # Enable Docker Swarm mode
+            - --providers.docker.swarmmode
+            # Create an entrypoint "http" listening on port 80
+            - --entrypoints.http.address=:80
+            # Create an entrypoint "https" listening on port 443
+            - --entrypoints.https.address=:443
+            # Create the certificate resolver "le" for Let's Encrypt, uses the environment variable EMAIL
+            - --certificatesresolvers.le.acme.email=hermansochi@ya.ru
+            # Store the Let's Encrypt certificates in the mounted volume
+            - --certificatesresolvers.le.acme.storage=/certs/acme.json
+            # Use the TLS Challenge for Let's Encrypt
+            - --certificatesresolvers.le.acme.tlschallenge=true
+            # Enable the access log, with HTTP requests
+            #- --accesslog
+            # Enable the Traefik log, for configurations and errors
+            #- --log
+            # Enable the Dashboard and API
+            - --api
+        networks:
+            - traefik-public
 
 volumes:
     traefik-public-certs:
